--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(PICO_BOARD "pico")
 set(PICO_COMPILER "pico_arm_gcc")
 set(PICO_PLATFORM "rp2040")
-set(PICO_PIO_USB_PATH $ENV{PICO_PIO_USB_PATH})
+set(PICO_PIO_USB_PATH "$ENV{PICO_PIO_USB_PATH}/src")
 set(PICO_SDK_PATH $ENV{PICO_SDK_PATH})
 set(PICO_TINYUSB_PATH $ENV{PICO_TINYUSB_PATH})
 
