--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,4 +23,4 @@ jobs:
         env:
           GH_TOKEN: ${{ github.token }}
         run: |
-          gh release create --repo "${{github.repository}}" --generate-notes "${{github.ref_name}}" artifacts/*.uf2
+          gh release create --repo "${{github.repository}}" --generate-notes "${{github.ref_name}}" artifacts/**/*.uf2
